# Schrobox

./: .env  .gitignore  README.md  docker-compose.yaml
authenticationService/: Cargo.toml  Dockerfile
authentication_service/: Cargo.toml  Dockerfile  makefile
authentication_service/src/: handlers.rs  jwt.rs  main.rs  users.rs
authentication_service/user_api/: Cargo.toml
authentication_service/user_api/src/: lib.rs
database_service/: .gitignore  Dockerfile  Makefile  README.md  auth.env  check_env.sh  setup_db.sh
database_service/kube/resources/: gce-ssd-storageclass.yaml  mongodb-configdb-service.yaml  mongodb-maindb-service.yaml  mongodb-mongos-service.yaml  xfs-gce-ssd-persistentvolume.yaml
database_service/kube/scripts/: DB_setup.sh  generate.sh  teardown.sh
env_files/: auth.env  database.env  frontend.env
filesharing_service/: .env  Cargo.toml
filesharing_service/src/: auth.rs  main.rs
frontend_service/schrobox/: README.md  package.json
frontend_service/schrobox-win/: README.md  package.json
frontend_service/schrobox-win/src/assets/api_wrapper/: APIError.js  AuthAPI.js  global.js  requests.js
frontend_service/schrobox-win/src/assets/scss/: globals.scss
frontend_service/schrobox-win/src/components/: EventCard.vue  EventsList.vue  LoginBox.vue
frontend_service/schrobox-win/src/components/partials/: Nav.vue
frontend_service/schrobox-win/src/router/: index.js
frontend_service/schrobox-win/src/store/: index.js
frontend_service/schrobox-win/src/store/modules/: Session.js
frontend_service/schrobox-win/src/views/: EventSingle.vue  Login.vue  LoginPage.vue
