[package]
name = "authentication_service"
version = "0.1.0"
authors = ["Brandsma", "Steegstra"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
actix-web = "3"
actix-web-httpauth = { git = "https://github.com/actix/actix-web-httpauth" }
actix-rt = "1.0"
env_logger="0.9.0"
mongodb = "1.2.0"
chrono = "0.3.0"
serde = "1"
serde_json = "1"
bson = "2.0.0-beta.3"
bcrypt = "0.10"
jsonwebtoken = "7.2.0"
pbkdf2 = "0.9"
rand_core = { version = "0.6", features = ["std"] }