[package]
name = "filesharing_service"
version = "0.1.0"
authors = ["Brandsma <a.brandsma@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
actix-web-httpauth = "0.5.1"
env_logger="0.9.0"
actix-web = "3.3.2"
actix-rt = "1.1.1"
actix-service = "1.0.6"
actix-cors = "0.5.4"
actix-http = "2.2.1"
derive_more =  "0.99.16"
serde = "1"
serde_json = "1"
jsonwebtoken = "7.2.0"
futures = "0.3.17"